# enigma

./: .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE  README.md  README_ar.md  README_de.md  README_es.md  README_fr.md  README_it.md  README_ja.md  README_ko.md  README_nl.md  README_pl.md  README_pt.md  README_ru.md  README_zh.md  docker-compose.2clouds.yaml  docker-compose.yaml  release-please-config.json
.github/workflows/: ci.yml  release.yml
crates/enigma-auth/: Cargo.toml
crates/enigma-auth/src/: error.rs  jwt.rs  lib.rs  middleware.rs  password.rs  permissions.rs  token.rs  types.rs
crates/enigma-auth/src/store/: mod.rs  postgres.rs  seed.rs  sqlite.rs
crates/enigma-cli/: Cargo.toml
crates/enigma-cli/src/: main.rs
crates/enigma-cli/src/commands/: backup.rs  config.rs  encrypt_cred.rs  gc.rs  init.rs  list.rs  mod.rs  providers.rs  restore.rs  status.rs  verify.rs
crates/enigma-core/: Cargo.toml
crates/enigma-core/src/: compression.rs  error.rs  lib.rs  types.rs
crates/enigma-core/src/chunk/: cdc.rs  fixed.rs  mod.rs
crates/enigma-core/src/config/: credentials.rs  mod.rs
crates/enigma-core/src/crypto/: mod.rs
crates/enigma-core/src/dedup/: mod.rs
crates/enigma-core/src/distributor/: mod.rs
crates/enigma-core/src/manifest/: mod.rs  queries.rs  schema.rs
crates/enigma-core/tests/: bench_pipeline.rs
crates/enigma-keys/: Cargo.toml
crates/enigma-keys/src/: aws_secretsmanager.rs  azure_vault.rs  factory.rs  gcp_secretmanager.rs  lib.rs  local.rs  provider.rs
crates/enigma-keys/tests/: bench_keys.rs  vault_providers.rs
crates/enigma-proxy/: Cargo.toml
crates/enigma-proxy/src/: main.rs  metrics.rs
crates/enigma-raft/: Cargo.toml  build.rs
crates/enigma-raft/src/: config.rs  grpc_server.rs  lib.rs  log_store.rs  network.rs  state_machine.rs  types.rs
crates/enigma-raft/src/proto/: raft.proto
crates/enigma-s3/: Cargo.toml
crates/enigma-s3/src/: auth.rs  get.rs  lib.rs  list.rs  multipart.rs  ops.rs  put.rs  service.rs
crates/enigma-storage/: Cargo.toml
crates/enigma-storage/src/: azure.rs  gcs.rs  lib.rs  local.rs  provider.rs  s3.rs
crates/enigma-storage/tests/: bench_cloud.rs  cloud_providers.rs  replication_e2e.rs
crates/enigma-web/: Cargo.toml
crates/enigma-web/frontend/: index.html  package.json  vite.config.js
crates/enigma-web/frontend/src/: App.svelte  app.css
crates/enigma-web/frontend/src/components/: Header.svelte  Modal.svelte  Sidebar.svelte  StatCard.svelte  TokenReveal.svelte  UploadPanel.svelte
crates/enigma-web/frontend/src/lib/: api.js  stores.js
crates/enigma-web/frontend/src/pages/: AuditLog.svelte  Buckets.svelte  Cluster.svelte  Dashboard.svelte  Files.svelte  Groups.svelte  Login.svelte  Settings.svelte  Storage.svelte  Users.svelte
crates/enigma-web/src/: auth.rs  cluster_handle.rs  lib.rs  models.rs  state.rs  static_files.rs
crates/enigma-web/src/routes/: audit.rs  cluster.rs  files.rs  groups.rs  mod.rs  namespaces.rs  permissions.rs  status.rs  storage.rs  tokens.rs  users.rs
dev/: config-2clouds.toml  config-e2e.toml  config-multicloud.toml  config-node1.toml  config-node2.toml  config-node3.toml  config-single.toml  local-node1.toml  local-node2.toml  local-node3.toml
k8s/: enigma-cluster.yaml  rustfs.yaml
samples/ansible/: README.md  inventory.ini  playbook.yml
samples/ansible/templates/: enigma-config.toml.j2  enigma-proxy.service.j2
samples/cloud-init/: README.md  cloud-init.yaml
samples/docker-compose/: README.md  config-node1.toml  config-node2.toml  config-node3.toml  docker-compose.yaml
samples/kind/: README.md  kind-cluster.yaml
tests/: e2e_rustfs.sh
