[workspace]
resolver = "3"
members = [
    "crates/enigma-core",
    "crates/enigma-storage",
    "crates/enigma-keys",
    "crates/enigma-cli",
    "crates/enigma-s3",
    "crates/enigma-raft",
    "crates/enigma-proxy",
    "crates/enigma-web",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
rust-version = "1.85"

[workspace.dependencies]
# Async
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"

# Crypto
aes-gcm = "0.10"
argon2 = "0.5"
sha2 = "0.10"
rand = "0.8"
subtle = "2"
zeroize = { version = "1", features = ["derive"] }
ml-kem = "0.2"
hkdf = "0.12"

# Storage
rusqlite = { version = "0.31", features = ["bundled"] }

# CLI
clap = { version = "4", features = ["derive", "env"] }
indicatif = "0.17"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Chunking
fastcdc = "3"

# Compression
zstd = "0.13"

# Error handling
thiserror = "2"
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# UUID
uuid = { version = "1", features = ["v7"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# Config
toml = "0.8"
dirs = "5"

# Cloud SDKs
aws-sdk-s3 = "1"
aws-sdk-secretsmanager = "1"
aws-config = { version = "1", features = ["behavior-version-latest"] }
azure_storage = "0.20"
azure_storage_blobs = "0.20"
google-cloud-storage = "0.22"

# Vault SDKs
azure_security_keyvault_secrets = "0.10"
azure_identity = "0.31"
google-cloud-secretmanager-v1 = "1.4"
google-cloud-gax = "1.6"

# S3 server
s3s = "0.11"
s3s-aws = "0.11"
hyper = { version = "1", features = ["server", "http1", "http2"] }
hyper-util = { version = "0.1", features = ["tokio", "server-auto", "http1", "http2"] }
http = "1"
http-body-util = "0.1"
bytes = "1"
tower = "0.5"
tower-service = "0.3"
pin-project-lite = "0.2"
md-5 = "0.10"
futures = "0.3"
tokio-stream = "0.1"

# TLS
tokio-rustls = "0.26"
rustls-pemfile = "2"
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }

# Metrics
prometheus = "0.13"

# Web UI
axum = "0.8"
jsonwebtoken = "9"
rust-embed = "8"
mime_guess = "2"

# Raft
openraft = { version = "0.9", features = ["serde", "storage-v2"] }
tonic = "0.12"
prost = "0.13"

# Internal
enigma-core = { path = "crates/enigma-core" }
enigma-storage = { path = "crates/enigma-storage" }
enigma-keys = { path = "crates/enigma-keys" }
enigma-s3 = { path = "crates/enigma-s3" }
enigma-raft = { path = "crates/enigma-raft" }
enigma-web = { path = "crates/enigma-web" }
