[package]
name = "enigma-cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "enigma"
path = "src/main.rs"

[dependencies]
enigma-core.workspace = true
enigma-storage.workspace = true
enigma-keys.workspace = true
tokio.workspace = true
clap.workspace = true
indicatif.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
sha2.workspace = true
