[package]
name = "enigma-core"
version.workspace = true
edition.workspace = true

[dependencies]
tokio.workspace = true
async-trait.workspace = true
aes-gcm.workspace = true
sha2.workspace = true
rand.workspace = true
subtle.workspace = true
zeroize.workspace = true
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
fastcdc.workspace = true
zstd.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
toml.workspace = true
dirs.workspace = true
uuid.workspace = true
chrono.workspace = true

tempfile.workspace = true

[dev-dependencies]
