[package]
name = "enigma-proxy"
version.workspace = true
edition.workspace = true

[[bin]]
name = "enigma-proxy"
path = "src/main.rs"

[dependencies]
enigma-core.workspace = true
enigma-storage.workspace = true
enigma-keys.workspace = true
enigma-s3.workspace = true
enigma-raft.workspace = true
tokio = { workspace = true, features = ["full"] }
hyper.workspace = true
hyper-util.workspace = true
http.workspace = true
http-body-util.workspace = true
s3s.workspace = true
s3s-aws.workspace = true
tower.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
toml.workspace = true
clap = { workspace = true, features = ["derive", "env"] }
