[package]
name = "enigma-proxy"
version.workspace = true
edition.workspace = true

[[bin]]
name = "enigma-proxy"
path = "src/main.rs"

[dependencies]
enigma-core.workspace = true
enigma-storage.workspace = true
enigma-keys.workspace = true
enigma-s3.workspace = true
enigma-raft.workspace = true
tokio = { workspace = true, features = ["full"] }
hyper.workspace = true
hyper-util.workspace = true
http.workspace = true
http-body-util.workspace = true
s3s.workspace = true
s3s-aws.workspace = true
tower.workspace = true
bytes.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
toml.workspace = true
clap = { workspace = true, features = ["derive", "env"] }

# TLS (optional)
tokio-rustls = { workspace = true, optional = true }
rustls-pemfile = { workspace = true, optional = true }
rustls = { workspace = true, optional = true }

# Metrics (optional)
prometheus = { workspace = true, optional = true }

# Web UI (optional)
enigma-web = { workspace = true, optional = true }

[features]
default = []
tls = ["dep:tokio-rustls", "dep:rustls-pemfile", "dep:rustls"]
metrics = ["dep:prometheus"]
web = ["dep:enigma-web"]
azure-keyvault = ["enigma-keys/azure-keyvault"]
gcp-secretmanager = ["enigma-keys/gcp-secretmanager"]
aws-secretsmanager = ["enigma-keys/aws-secretsmanager"]
