[package]
name = "enigma-raft"
version.workspace = true
edition.workspace = true

[dependencies]
enigma-core.workspace = true
tokio = { workspace = true, features = ["full"] }
async-trait.workspace = true
openraft.workspace = true
tonic.workspace = true
prost.workspace = true
serde.workspace = true
serde_json.workspace = true
rusqlite.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
bytes.workspace = true
futures.workspace = true
tokio-stream.workspace = true

[build-dependencies]
tonic-build = "0.12"
