[package]
name = "enigma-web"
version.workspace = true
edition.workspace = true

[dependencies]
enigma-core.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tracing.workspace = true
chrono.workspace = true
axum.workspace = true
jsonwebtoken.workspace = true
rust-embed.workspace = true
mime_guess.workspace = true
